# cross_chain_node

./: .gitignore  Cargo.toml  config.json  sepolideployedContract.txt
src/: abi.rs  main.rs  mod.rs
src/abi/: IWETH9.json
src/ethereum_provider/: providers.rs
src/provider_services/: providers.rs
src/receiver_service/: receive.rs
src/sender_service/: sender.rs
src/service_manager/: service_manager.rs
